# sbof

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: buf.rs  de.rs  error.rs  lib.rs  ser.rs
tests/: fuzz.rs  map.rs
