[package]
name = "sbof"
description = "Small Binary Object Format"
version = "0.1.0"
edition = "2024"
authors = ["DDAN"]
documentation = "https://docs.rs/sbof"
repository = "https://github.com/DDAN-17/sbof"
keywords = ["binary", "serde", "serialization", "deserialization", "format"]
categories = ["encoding"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
serde = {version = "1.0.219"}

[dev-dependencies]
serde = {version = "1.0.219", features = ["serde_derive"]}
serde_json = "1.0.141"
rand = "0.9.1"